# TOP-24

LAB_01-BASICS/src/bugs/: CMakeLists.txt  main_modified.c
LAB_01-BASICS/src/saxpy/: CMakeLists.txt  main_modified.c
LAB_01-BASICS/src/vector/: CMakeLists.txt  Makefile
